-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.10
-
Component/s: None
-
Labels:
-
Guilty Revision:73,436
reactOS 0.4.5RC1
VBox 4.3.40 (with installed guest additions)
according to ThFabba the patch should be integrated in 0.4.5RC1
However it does not work for me anymore, although this used to work with earlier ros releases and that exact same version of VBox.
I have to assume that this is a regression therefore.
We should double-check current trunk which should have the patch integrated as well currently.
- is duplicated by
-
CORE-12700 [Regression] desk.cpl hangs if guest additions are installed
-
- Resolved
-
- relates to
-
CORE-12700 [Regression] desk.cpl hangs if guest additions are installed
-
- Resolved
-
-
CORE-12765 Change color mode with VBox driver does not work
-
- Resolved
-
-
CORE-6742 Can't dynamically change the resolution by resizing in VirtualBox
-
- Resolved
-