[0.4.5] - Revert r73436 to avoid trouble with VirtualBox Guest Additions. CORE-13172 CORE-12700 CORE-12765

svn path=/branches/ros-branch-0_4_5/; revision=74458