reactos/dll/win32/shell32/shell32.cpp
@@ -346,6 +346,7 @@ STDAPI_(BOOL) DllMain(HINSTANCE hInstance, DWORD dwReason, LPVOID fImpLoad)
         InitCommonControlsEx(&InitCtrls);
 
         /* Bad idea, initialization in DllMain! */
+        SIC_Initialize();
         InitChangeNotifications();
     }
     else if (dwReason == DLL_PROCESS_DETACH)
